[metadata]
# replace with your username:
name = tlsutils
version = 0.0.1
author = Daniel Bond
author_email = danielbondno@gmail.com
description = Utilities to work with TLS and X.509 Certificates
#long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/bond/tlsutls
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    PyYAML >= 6


[options.entry_points]
console_scripts =
    tlsinfo = tlsutils.cli:tlsinfo

[options.packages.find]
where = src
